--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,17 +83,18 @@ input {
   display: flex;
   flex-direction: column;
 }
-ul {
+
+/* ul {
   list-style: none;
   padding: 0;
   margin: 0;
-}
+} */
 
-li {
+/* li {
   border: 1px solid black;
   padding: 10px;
   margin-bottom: 10px;
-}
+} */
 
 h2 {
   margin-top: 0;
@@ -102,7 +103,6 @@ h2 {
 img {
   max-width: 100%;
   height: auto;
-  margin-bottom: 10px;
 }
 
 img {
