--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@ body {
   padding: 0;
 }
 
-.auth {
+/* .auth {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,11 +61,11 @@ input {
   text-decoration: none;
 }
 
-/* a {
+a {
   text-decoration: none;
   margin: 10px;
   font-size: 25px;
-} */
+}
 
 .create-recipe {
   display: flex;
@@ -83,18 +83,17 @@ input {
   display: flex;
   flex-direction: column;
 }
-
-/* ul {
+ul {
   list-style: none;
   padding: 0;
   margin: 0;
-} */
+}
 
-/* li {
+li {
   border: 1px solid black;
   padding: 10px;
   margin-bottom: 10px;
-} */
+}
 
 h2 {
   margin-top: 0;
@@ -103,6 +102,7 @@ h2 {
 img {
   max-width: 100%;
   height: auto;
+  margin-bottom: 10px;
 }
 
 img {
@@ -112,4 +112,4 @@ img {
 p {
   max-width: 400px;
   font-size: 12px;
-}
+} */
